# LookingGlass

./: .gitignore  .gitmodules
client/: .gitignore  CMakeLists.txt
client/include/: utils.h  vect.h
client/include/interface/: renderer.h
client/renderers/EGL/: CMakeLists.txt  csgo.cpp  csgo.h  egl.c  overlay.c  overlay.h  pipe.c  pipe.h  wrapper.h
client/renderers/EGL/imgui_hook/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  imgui_hook.h  update_header.sh
client/renderers/EGL/imgui_hook/src/: bindings.rs  command_impl.rs  commands.rs  fonts.rs  lib.rs  pipe.rs
client/src/: main.c
