[package]
name = "imgui_hook"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4.0"

[build-dependencies]
bindgen = "0.54.1"

[lib]
crate-type = ["cdylib"]

