[package]
name = "imgui_hook"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
lazy_static = "1.4.0"
crossbeam = "0.7.3"
log = "0.4.11"
simplelog = "0.8.0"
libc = "0.2.74"

[build-dependencies]
bindgen = "0.54.1"

[lib]
crate-type = ["cdylib"]

